--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,1 +1,10 @@
-/* Narazie pusty, przygotowany w ramamch struktury projektu */
+.signup-form {
+  margin: auto;
+  width: 30%;
+}
+.signup-form div p {
+  font-weight: bold;
+}
+.signup-form div input {
+  width: 100%;
+}/*# sourceMappingURL=style.css.map */
