--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title><%= title %></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Strona główna</title>
 </head>
 <body>
-    <h1>Welcome to <%= title %></h1>
+    <div id="header">
+        <h2>Giełda logistyczna</h2>
+    </div>
+
+    <div id="login-select">
+        <div id="signin-option" class="option">
+            <a href="/signin">
+                <button>
+                    Zaloguj się
+                </button>
+            </a>
+        </div>
+
+        <div id="signup-option" class="option">
+            <a href="/signup">
+                <button>
+                    Zarejestruj się
+                </button>
+            </a>
+        </div>
+    </div>
+    
 </body>
 </html>
