--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -13,12 +13,16 @@
             <input type="email" name="email" id="email">
         </div>
         <div>
-            <p>Login</p>
-            <input type="text" name="username" id="username">
-        </div>
-        <div>
             <p>Hasło</p>
             <input type="password" name="password" id="password">
+        </div>
+        <div>
+            <p>Imie</p>
+            <input type="name" name="name" id="name">
+        </div>
+        <div>
+            <p>Nazwisko</p>
+            <input type="surname" name="surname" id="surname">
         </div>
         <div>
             <p>Wybierz funkcję, którą pełnisz</p>
